--- a/tecolotl-web/src/main/webapp/administracion/heredar-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/heredar-alumno.xhtml
@@ -45,7 +45,7 @@
                         <h:message for="seleccion-profesor" styleClass="uk-text-danger uk-display-block primera-mayuscula"/>
                     </div>
                     <div class="uk-margin uk-flex uk-flex-right">
-                        <h:commandButton value="Buscar" >
+                        <h:commandButton styleClass="uk-button uk-button-primary" value="Buscar" >
                             <f:ajax execute="seleccion-ciclo-escolar seleccion-profesor" listener="#{heredarAlumnoControlador.buscaGrupo()}"/>
                         </h:commandButton>
                     </div>
@@ -57,14 +57,37 @@
             <div class="uk-width-2-3">
                 <div class="uk-card uk-card-default uk-card-small uk-card-hover tabla">
                     <h:form id="formulario-alumnos">
-                        <div class="uk-card-header">
-                            <input type="checkbox">Seleccionar todos</input>
-                            <input type="checkbox">Deselecionat todos</input>
+                        <div class="uk-card-header uk-flex uk-flex-middle">
+                            <span class="uk-display-inline-block uk-margin-small-right">Selecionar todos:</span>
+                            <label class="switch">
+                                <input type="checkbox" class="uk-checkbox"/>
+                                <span class="slider round"/>
+                            </label>
                         </div>
                         <div class="uk-card-body">
-                            <input type="checkbox">Nombre Apellido paterno Apellido materno</input>
-                            <input type="checkbox">Nombre Apellido paterno Apellido materno</input>
-                            <input type="checkbox">Nombre Apellido paterno Apellido materno</input>
+                            <table class="uk-table uk-table-hover uk-table-divider uk-table-middle">
+                                <thead class="uk-background-primary">
+                                <tr>
+                                    <th class="letra-titulo">Nombre</th>
+                                    <th class="letra-titulo">Apellido Paterno</th>
+                                    <th class="letra-titulo">Apellido Materno</th>
+                                    <th class="letra-titulo">Seleccionar</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>Alumno</td>
+                                    <td>Apellido P</td>
+                                    <td>Apellido M</td>
+                                    <td>
+                                        <label class="switch">
+                                            <input type="checkbox" class="uk-checkbox"/>
+                                            <span class="slider round"/>
+                                        </label>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </h:form>
                 </div>
